--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clarity Admin Panel</title>
+    <title>Clarity FM/AI Environment</title>
     <style>
       html, body, #root {
         width: 100%;
